--- a/package.json
+++ b/package.json
@@ -16,21 +16,24 @@
   "homepage": "https://github.com/brainly/html-sketchapp-example#readme",
   "devDependencies": {
     "eslint": "^4.4.1",
+    "eslint-plugin-import": "^2.16.0",
     "frontend-tools-configs": "git+https://github.com/brainly/frontend-tools-configs.git"
   },
   "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
+    "@babel/plugin-transform-flow-strip-types": "^7.2.3",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@brainly/html-sketchapp": "git+https://github.com/brainly/html-sketchapp.git#master",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-loader": "^8.0.5",
     "puppeteer": "^0.13.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "style-guide": "git+https://github.com/brainly/style-guide.git#v142.5.0",
-    "webpack": "^3.0.0"
+    "style-guide": "git+https://github.com/brainly/style-guide.git#v143.0.1",
+    "webpack": "^3.12.0"
   }
 }
