--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "homepage": "https://github.com/brainly/html-sketchapp-example#readme",
   "devDependencies": {
     "eslint": "^4.4.1",
-    "eslint-plugin-import": "^2.16.0",
-    "frontend-tools-configs": "git+https://github.com/brainly/frontend-tools-configs.git"
+    "eslint-config-brainly": "^2.4.0",
+    "eslint-plugin-import": "^2.16.0"
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
