--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,12 @@
 {
   "extends": [
-    "./node_modules/frontend-tools-configs/eslint/main.js"
-  ]
+    "./node_modules/frontend-tools-configs/packages/eslint-config-brainly/rules/main.js"
+  ],
+  "rules": {
+    "no-async-promise-executor": 0,
+    "no-misleading-character-class": 0,
+    "require-atomic-updates": 0,
+    "max-classes-per-file": 0,
+    "no-useless-catch": 0
+  },
 }
