Upgrade dependencies due to security reasons

--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
   "homepage": "https://github.com/brainly/html-sketchapp-example#readme",
   "devDependencies": {
     "eslint": "^4.4.1",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.18.2",
     "frontend-tools-configs": "git+https://github.com/brainly/frontend-tools-configs.git"
   },
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
-    "@babel/plugin-transform-flow-strip-types": "^7.2.3",
-    "@babel/plugin-transform-regenerator": "^7.0.0",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-flow-strip-types": "^7.6.3",
+    "@babel/plugin-transform-regenerator": "^7.4.5",
+    "@babel/preset-env": "^7.6.3",
     "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-react": "^7.6.3",
     "@brainly/html-sketchapp": "git+https://github.com/html-sketchapp/html-sketchapp.git#master",
-    "babel-loader": "^8.0.5",
-    "puppeteer": "^0.13.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "babel-loader": "^8.0.6",
+    "puppeteer": "1.13.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "style-guide": "git+https://github.com/brainly/style-guide.git#v149.0.3",
     "webpack": "^3.12.0"
   }
