--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.6.3",
-    "@brainly/html-sketchapp": "git+https://github.com/html-sketchapp/html-sketchapp.git#Handle-Smart-Layout-in-Symbols",
+    "@brainly/html-sketchapp": "git+https://github.com/html-sketchapp/html-sketchapp.git#master",
     "babel-loader": "^8.0.6",
     "puppeteer": "1.13.0",
     "react": "^16.11.0",
