--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "puppeteer": "1.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "style-guide": "git+https://github.com/brainly/style-guide.git#v156.0.0",
+    "brainly-style-guide": "^157.0.1",
     "webpack": "^3.12.0"
   }
 }
