--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "eslint": "^4.4.1",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-react": "^7.20.3",
     "frontend-tools-configs": "git+https://github.com/brainly/frontend-tools-configs.git"
   },
   "dependencies": {
